added a new font-family to the body selector

--- a/stiles.css
+++ b/stiles.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     text-align: center;
-    font-family: Cambria;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .bottom-container{
     background-color: rgb(153, 214, 194);
